docs/api/qiskit/0.19/qiskit.transpiler.passes.Collect2qBlocks.mdx
---
title: Collect2qBlocks (v0.19)
description: API reference for qiskit.transpiler.passes.Collect2qBlocks in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Collect2qBlocks
---

# Collect2qBlocks

<Class id="qiskit.transpiler.passes.Collect2qBlocks" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/optimization/collect_2q_blocks.py" signature="Collect2qBlocks(*args, **kwargs)" modifiers="class">
  Collect sequences of uninterrupted gates acting on 2 qubits.

  Traverse the DAG and find blocks of gates that act consecutively on pairs of qubits. Write the blocks to propert\_set as a dictionary of the form:

  ```python
  {(q0, q1): [[g0, g1, g2], [g5]],
   (q0, q2): [[g3, g4]]
   ..
   .
  }
  ```

  Based on implementation by Andrew Cross.

  ## Attributes

  <span id="collect2qblocks-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Collect2qBlocks.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="collect2qblocks-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Collect2qBlocks.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="collect2qblocks-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Collect2qBlocks.name" signature="Collect2qBlocks.name()">
    Return the name of the pass.
  </Function>

  <span id="collect2qblocks-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Collect2qBlocks.run" signature="Collect2qBlocks.run(dag)">
    Run the Collect2qBlocks pass on dag.

    The blocks contain “op” nodes in topological sort order such that all gates in a block act on the same pair of qubits and are adjacent in the circuit. the blocks are built by examining predecessors and successors of “cx” gates in the circuit. u1, u2, u3, cx, id gates will be included.

    After the execution, `property_set['block_list']` is set to a list of tuples of “op” node labels.
  </Function>
</Class>

